layout fix with smaller windows
the elements would overlap when the the window gets minimized. this way they won't but i still need to fix my name staying where it is. probably need to change left from percentage to px

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -271,10 +271,10 @@ html, body {
 }
 
 .box{
-  position: relative;
+  position: absolute;
   display: block;
-  margin-top: 30%;
-  margin-left: 3%;
+  top: 50%;
+  left: 3%;
   left: 100px;
   width: 1200px;
   height: 580px;
@@ -414,7 +414,7 @@ h1 {
  .toolbar {
 	 position: absolute;
 	 width: 100%;
-	 height: 420px;
+	 height: 45%;
      top:0%;
 	 background: #e8ba4a;
 }
